--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <script src="todo.js"></script>
 </head>
 <body>
-    
+    <div id="list">
+        <h2>To-Dos</h2>
+        <input type="text" id="addTask" placeholder="New task">
+        <button id="addBtn">Add</button>
+        <ul id="taskList"></ul>
+    </div>
 </body>
 </html>
