--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div id="list">
         <h2>To-Dos</h2>
-        <input type="text" id="addTask" placeholder="New task">
+        <input type="text" id="taskInput" placeholder="New task">
         <button id="addBtn">Add</button>
-        <ul id="taskList"></ul>
     </div>
+    <ul id="taskList"></ul>
 </body>
 </html>
